アプリケーション名の修正

--- a/app/views/pages/terms_of_service.html.erb
+++ b/app/views/pages/terms_of_service.html.erb
@@ -4,10 +4,10 @@
 </p>
 <h2>第1条（用語の定義）</h2>
 <ol>
-  <li>「本サービス」とは、サービス提供サイトを通じて提供される、「dotwiki」という名称のウェブサービスを意味します。</li>
+  <li>「本サービス」とは、サービス提供サイトを通じて提供される、「FINZ」という名称のウェブサービスを意味します。</li>
   <li>「サービス提供者」とは、本サービスの提供者を意味します。</li>
   <li>「サービス利用者」とは、本サービスの利用者を意味します。</li>
-  <li>「サービス提供サイト」とは、URL: <a href="https://www.dotwiki.xyz">https://www.dotwiki.xyz</a> 以下のウェブサイトを意味します。</li>
+  <li>「サービス提供サイト」とは、URL: <a href="https://www.finz.me">https://www.finz.me</a> 以下のウェブサイトを意味します。</li>
   <li>「サービス利用契約」とは、本規約の内容を契約条件に含む、サービス提供者とサービス利用者との間で締結される本サービスの利用契約を意味します。</li>
   <li>「投稿データ」とは、サービス利用者が本サービスを利用して投稿その他の送信をするコンテンツ（文章、画像、動画その他のデータを含みます。）を意味します。</li>
   <li>「知的財産権」とは、著作権、特許権、実用新案権、意匠権、商標権その他の知的財産権（それらの権利を取得し、またはそれらの権利につき登録等を出願する権利を含みます。）を意味します。</li>
