--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -7,7 +7,7 @@
 
   <div class="form-group">
     <%= form.label :password, class: 'form-label' %>
-    <%= form.password_field :password, id: :user_password, class: 'form-input' %>
+    <%= form.password_field :password, id: :user_password, class: 'input' %>
   </div>
 
   <div class="form-action">
