--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,17 +4,17 @@
 
 <div class="field">
   <%= form.label :name, class: 'form-label' %>
-  <%= form.text_field :name, id: :user_name, class: 'form-input w-full mb-4', placeholder: 'ユーザー名' %>
+  <%= form.text_field :name, id: :user_name, class: 'input w-full mb-4', placeholder: 'ユーザー名' %>
 </div>
 
 <div class="field">
   <%= form.label :email, class: 'form-label' %>
-  <%= form.text_field :email, id: :user_email, class: 'form-input w-full mb-4', placeholder: 'メールアドレス' %>
+  <%= form.text_field :email, id: :user_email, class: 'input w-full mb-4', placeholder: 'メールアドレス' %>
 </div>
 
 <div class="field">
   <%= form.label :avatar, class: 'form-label' %>
-  <%= form.file_field :avatar, id: :user_avatar, class: 'form-input w-full mb-4' %>
+  <%= form.file_field :avatar, id: :user_avatar, class: 'input w-full mb-4' %>
 </div>
 
 <div class="field">
