--- a/app/frontend/stylesheet/tailwind.pcss
+++ b/app/frontend/stylesheet/tailwind.pcss
@@ -18,6 +18,13 @@ a {
     color: theme('colors.blue.500');
   }
 }
+.input {
+  @apply rounded border border-gray-400 text-base bg-white px-4 py-2;
+  &:focus {
+    @apply outline-none border-blue-500;
+  }
+}
+
 @tailwind components;
 .btn {
   @apply font-bold py-2 px-4 rounded cursor-pointer bg-gray-500 text-white;
@@ -46,17 +53,7 @@ a {
 .tag {
   @apply inline-block bg-indigo-200 rounded px-2;
 }
-input[type='text'],
-input[type='email'],
-input[type='password'],
-textarea {
-  @apply rounded border border-gray-400 text-base bg-white px-4 py-2;
-}
 
-input:focus,
-textarea:focus {
-  @apply outline-none border-blue-500;
-}
 @tailwind utilities;
 
 @layer base {
