--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -5,11 +5,11 @@
   <%= form_with(url: password_resets_path, method: :post, local: true) do |form| %>
   <div class="form-group">
     <%= form.label :email, class: "form-label" %>
-    <%= form.text_field :email, class: "form-input" %>
+    <%= form.text_field :email, class: "input" %>
   </div>
 
   <div class="form-action">
-    <%= form.submit "送信", class: "btn btn-primary" %>
+    <%= form.submit "送信", class: "btn btn-link" %>
   </div>
   <% end %>
   <div class="divider" style="margin-top: 1rem;"></div>
