--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -4,7 +4,7 @@
 
 <div class="field">
   <%= form.label :password, class: 'form-label' %>
-  <%= form.password_field :password, id: :user_password, class: 'form-input w-full mb-2' %>
+  <%= form.password_field :password, id: :user_password, class: 'input w-full mb-2' %>
 </div>
 
 <div class="field">
