--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -37,4 +37,4 @@
 
 <%= render partial: 'shared/add_tackle' %>
 
-<%= javascript_pack_tag 'splide', media: 'all' %>
+<%= javascript_pack_tag 'splide', media: 'all', defer: true %>
