--- a/app/views/tackles/_form.html.erb
+++ b/app/views/tackles/_form.html.erb
@@ -59,4 +59,4 @@
 
 <% end %>
 
-<%= javascript_pack_tag 'tagedit', media: 'all' %>
+<%= javascript_pack_tag 'tagedit', media: 'all', defer: true %>
