--- a/app/views/shared/_add_tackle.erb
+++ b/app/views/shared/_add_tackle.erb
@@ -5,7 +5,7 @@
   <button id="add_tackle_button"
     class="p-0 w-20 h-20 md:w-32 md:h-32 bg-brand rounded-full hover:bg-blue-600 active:shadow-xl mouse shadow transition ease-in duration-200 focus:outline-none">
     <p class="text-white text-sm md:text-lg">投稿</p>
-    <svg version="1.1" id="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
+    <svg class="shake shake-constant" version="1.1" id="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
       y="0px" width="512px" height="512px" viewBox="0 0 512 512" class="-mt-1"
       style="width: 100%; height: 40%; opacity: 1; display: inherit;" xml:space="preserve">
       <g>
