--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="-mt-8" style="background-image: url(/images/item_icons.png);">
-  <div class="container py-6">
+  <div class="container py-6 px-4">
     <h1 class="font-bold pt-3 text-center">FINZはアングラーのタックルボックスなど、釣具や装備写真を共有するサービスです。</h1>
     <h2 class="font-bold py-3 text-center">こだわりのケース収納・ランガンシステムなどなど、なんでも投稿してください！</h2>
     <% unless current_user %>
