--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
       <div class="mr-2"><img src="<%= @user.current_avatar %>" alt="" class="h-20 w-20 rounded-full"></div>
       <div class="flex-1">
         <p class="text-2xl font-bold"><%= @user.name %></p>
-        <% if current_user && current_user != @user %>
+        <% unless current_user == @user %>
           <% if current_user.following?(@user) %>
             <%= form_with(url: relationship_path(@user), html: { method: :delete }) do |f| %>
               <%= f.hidden_field :follow_id, value: @user.id %>
